[package]
name = "knockknock"
version = "1.0.1"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "CLI tool for ping protocols"
homepage = "https://github.com/zondatw/knock_knock"
repository = "https://github.com/zondatw/knock_knock"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zpinger = "0.1.0"
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
colored = "2"
