[package]
name = "knockknock"
version = "1.3.0"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "CLI tool for ping protocols"
homepage = "https://github.com/zondatw/knock_knock"
repository = "https://github.com/zondatw/knock_knock"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zpinger = { path = "../zpinger", version = "0.4.0" }
clap = { version = "4", features = ["derive"] }
colored = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
