[package]
name = "knockknock"
version = "1.5.0"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "CLI tool for ping protocols"
homepage = "https://github.com/zondatw/knock_knock"
repository = "https://github.com/zondatw/knock_knock"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
mcp = ["dep:rmcp", "dep:schemars", "dep:serde", "dep:serde_json"]

[dependencies]
zpinger = { path = "../zpinger", version = "0.5.0" }
clap = { version = "4", features = ["derive"] }
colored = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
rmcp = { version = "0.6", optional = true, features = ["server", "transport-io", "macros"] }
schemars = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[[bin]]
name = "knockknock"
path = "src/main.rs"

[[bin]]
name = "knockknock-mcp"
path = "src/bin/knockknock-mcp.rs"
required-features = ["mcp"]
