[package]
name = "testserver"
version = "0.1.0"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "Local TCP/UDP/HTTP servers for exercising knock_knock pingers end-to-end"
homepage = "https://github.com/zondatw/knock_knock"
repository = "https://github.com/zondatw/knock_knock"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "testserver"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pki-types = "1"
