[package]
name = "zpinger"
version = "0.4.0"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "zonda pinger library"
homepage = "https://github.com/zondatw/knock_knock"
repository = "https://github.com/zondatw/knock_knock"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
rustls-pki-types = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
tonic = { version = "0.12", default-features = false, features = ["channel", "tls", "tls-webpki-roots"] }
tonic-health = { version = "0.12", default-features = false }
webpki-roots = "0.26"

[dev-dependencies]
testserver = { path = "../testserver" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
