[package]
name = "zpinger"
version = "0.6.0"
authors = ["Zonda Yang <u226699@gmail.com>"]
description = "Async, protocol-agnostic latency probe library: TCP / UDP / HTTP(S) / WebSocket / DNS / MQTT / gRPC / HLS / TLS / NTP / STUN / TURN / RTSP / RTMP"
homepage = "https://github.com/zondatw/knock_knock"
repository = "https://github.com/zondatw/knock_knock"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["ping", "latency", "network", "protocol", "async"]
categories = ["network-programming", "asynchronous"]

[features]
# All protocols on by default — pre-features users keep getting the
# same library when they upgrade. Opt out with
# `default-features = false` and pick only what you need.
default = ["all"]
all = ["tcp", "udp", "dns", "http", "ws", "mqtt", "grpc", "hls", "tls", "ntp", "stun", "turn", "rtsp", "rtmp"]

# Per-protocol features. `tcp` / `udp` / `dns` / `ntp` / `stun` /
# `turn` add no extra dependencies beyond the always-on tokio +
# async-trait core (the last three just hand-roll their own UDP
# packet shapes).
tcp = []
udp = []
dns = []
ntp = []
stun = []
# `turn` shares STUN's packet builder but doesn't re-export
# `StunPinger`. Pick `turn` alone if you only want TURN; pick both if
# you want both pingers exposed.
turn = []

# TLS-using protocols share the rustls + tokio-rustls + webpki-roots
# stack via the internal `_tls` aggregator. Don't enable `_tls`
# directly — pick the protocol feature you actually want.
http = ["_tls"]
ws = ["_tls", "dep:tokio-tungstenite", "dep:futures-util"]
mqtt = ["_tls"]
hls = ["_tls"]
tls = ["_tls"]
rtsp = ["_tls"]
rtmp = ["_tls"]

# gRPC has its own TLS stack via tonic; doesn't pull `_tls`.
grpc = ["dep:tonic", "dep:tonic-health"]

_tls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pki-types",
    "dep:webpki-roots",
]

[dependencies]
# Always-on core: trait machinery + tokio runtime + URI parser.
async-trait = "0.1"
regex = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }

# Optional, gated by the features above.
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring", "tls12", "logging"] }
rustls-pki-types = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.24", optional = true, default-features = false, features = ["handshake"] }
tonic = { version = "0.12", optional = true, default-features = false, features = ["channel", "tls", "tls-webpki-roots"] }
tonic-health = { version = "0.12", optional = true, default-features = false }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
testserver = { path = "../testserver" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
